--- a/project/index.html
+++ b/project/index.html
@@ -19,7 +19,7 @@
                     <a href="#home" style="padding-left: 10px;">Home</a>
                     <a href="#about"style="padding-left: 10px;">About</a>
                     <a href="#services"style="padding-left: 10px;">Downloads</a>
-                    <a href="#contact"style="padding-left: 10px;">Contact</a>
+                    <a href="#contact"style="padding-left: 10px;">ContactUs</a>
                     <a href="#contact"style="padding-left: 10px;">Account</a>
             </nav>
             </center>
@@ -53,7 +53,15 @@
     <img src="img4.jfif" alt="Image4" height="150px" width="200px">
 </marquee>
 <footer style="text-align: center; padding: 10px; background-color: lightgray; margin-top: 20px;">
+       <nav >
+                    <a href="#home" style="padding-left: 10px;">Home</a><br>
+                    <a href="#about"style="padding-left: 10px;">About</a><br>
+                    <a href="#services"style="padding-left: 10px;">Downloads</a><br>
+                    <a href="#contact"style="padding-left: 10px;">Contact</a><br>
+                    <a href="#contact"style="padding-left: 10px;">Account</a><br>
+        </nav>
     <p>&copy; 2024 YouTube. All rights reserved.</p>
+    </footer>   
 </section>
 </body>
 </html>
