--- a/project/AboutUs.html
+++ b/project/AboutUs.html
@@ -3,37 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us - YouTube</title>
 </head>
+
 <body>
-     <header>
-        <div>
-            <img src="https://thumbs.dreamstime.com/b/dreamstime-template-198518319.jpg" alt="YouTube Logo" height="50px" width="60px">
-            <input type="text" style=" padding-left: 10px; height:30px; width:400px; border-radius: 20px;" placeholder="Search">
-            <button style="height:30px; border-radius: 20px;">Search</button>
-            <section>
-                <hr>
-            <center>
-            <nav>
-                    <a href="#home" style="padding-left: 10px;">Home</a>
-                    <a href="#about"style="padding-left: 10px;">About</a>
-                    <a href="#services"style="padding-left: 10px;">Downloads</a>
-                    <a href="#contact"style="padding-left: 10px;">ContactUs</a>
-                    <a href="#contact"style="padding-left: 10px;">Account</a>
-            </nav>
-            </center>
-            </section>
-        </div>
-    </header>
-    <footer style="text-align: center; padding: 10px; background-color: lightgray; margin-top: 20px;">
-       <nav >
-                    <a href="#home" style="padding-left: 10px;">Home</a><br>
-                    <a href="#about"style="padding-left: 10px;">About</a><br>
-                    <a href="#services"style="padding-left: 10px;">Downloads</a><br>
-                    <a href="#contact"style="padding-left: 10px;">Contact</a><br>
-                    <a href="#contact"style="padding-left: 10px;">Account</a><br>
+
+
+<header>
+
+    <img src="https://thumbs.dreamstime.com/b/dreamstime-template-198518319.jpg"
+         alt="YouTube Logo" height="50" width="60">
+
+    <input type="text" placeholder="Search" size="40">
+    <button>Search</button>
+
+    <hr>
+
+    <center>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="AboutUs.html">About</a> |
+            <a href="Downloads.html">Downloads</a> |
+            <a href="ContactUs.html">Contact Us</a> |
+            <a href="Account.html">Account</a>
         </nav>
+    </center>
+
+    <hr>
+</header>
+
+
+<main>
+
+<section>
+    <h2>About Us</h2>
+
+    <p>
+        YouTube is the world’s largest video sharing platform where people
+        can watch, upload and share videos with millions of users.
+    </p>
+
+    <p>
+        Our mission is to give everyone a voice and show them the world.
+        Users can create their own channels, upload videos and grow
+        their audience easily.
+    </p>
+
+    <p>
+        Students, teachers, content creators and businesses use YouTube
+        to learn, teach, entertain and promote their skills.
+    </p>
+
+    <h3>Why Choose Us?</h3>
+    <ul>
+        <li>Free video hosting</li>
+        <li>Millions of learning videos</li>
+        <li>Easy sharing options</li>
+        <li>Support for creators</li>
+    </ul>
+
+    <h3>Our Vision</h3>
+    <p>
+        To connect people across the world through videos and
+        make learning and entertainment accessible to everyone.
+    </p>
+
+</section>
+
+</main>
+
+
+<footer style="text-align: center; background-color: lightgray; padding: 10px;">
+
+    <nav>
+        <a href="index.html">Home</a><br>
+        <a href="AboutUs.html">About</a><br>
+        <a href="Downloads.html">Downloads</a><br>
+        <a href="ContactUs.html">Contact</a><br>
+        <a href="Account.html">Account</a><br>
+    </nav>
+
     <p>&copy; 2024 YouTube. All rights reserved.</p>
-    </footer> 
+
+</footer>
+
 </body>
 </html>
