--- a/project/Account.Html
+++ b/project/Account.Html
@@ -3,37 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>YouTube Landing Page</title>
 </head>
+
 <body>
-     <header>
-        <div>
-            <img src="https://thumbs.dreamstime.com/b/dreamstime-template-198518319.jpg" alt="YouTube Logo" height="50px" width="60px">
-            <input type="text" style=" padding-left: 10px; height:30px; width:400px; border-radius: 20px;" placeholder="Search">
-            <button style="height:30px; border-radius: 20px;">Search</button>
-            <section>
-                <hr>
-            <center>
-            <nav>
-                    <a href="#home" style="padding-left: 10px;">Home</a>
-                    <a href="#about"style="padding-left: 10px;">About</a>
-                    <a href="#services"style="padding-left: 10px;">Downloads</a>
-                    <a href="#contact"style="padding-left: 10px;">ContactUs</a>
-                    <a href="#contact"style="padding-left: 10px;">Account</a>
-            </nav>
-            </center>
-            </section>
-        </div>
-    </header>
-    <footer style="text-align: center; padding: 10px; background-color: lightgray; margin-top: 20px;">
-       <nav >
-                    <a href="#home" style="padding-left: 10px;">Home</a><br>
-                    <a href="#about"style="padding-left: 10px;">About</a><br>
-                    <a href="#services"style="padding-left: 10px;">Downloads</a><br>
-                    <a href="#contact"style="padding-left: 10px;">Contact</a><br>
-                    <a href="#contact"style="padding-left: 10px;">Account</a><br>
+
+
+<header>
+
+    <img src="https://thumbs.dreamstime.com/b/dreamstime-template-198518319.jpg"
+         alt="YouTube Logo" height="50" width="60">
+
+    <input type="text" placeholder="Search" size="40">
+    <button>Search</button>
+
+    <hr>
+
+    <center>
+        <nav>
+            <a href="#home">Home</a> |
+            <a href="#about">About</a> |
+            <a href="#downloads">Downloads</a> |
+            <a href="#contact">Contact Us</a> |
+            <a href="#account">Account</a>
         </nav>
+    </center>
+
+    <hr>
+</header>
+
+
+
+<main>
+
+
+<section id="home">
+    <h2>Welcome to YouTube</h2>
+    <p>
+        Your go-to platform for video sharing and entertainment.
+        Watch videos, subscribe to channels and explore trending content.
+    </p>
+    <hr>
+</section>
+
+<section id="about">
+    <h2>About Us</h2>
+    <p>
+        YouTube is a video sharing platform where users can upload,
+        watch and share videos worldwide.
+    </p>
+    <hr>
+</section>
+
+<section id="downloads">
+    <h2>Downloads</h2>
+    <p>
+        Download our mobile app to enjoy videos anytime, anywhere.
+    </p>
+    <hr>
+</section>
+
+
+<section id="contact">
+    <h2>Contact Us</h2>
+    <p>
+        Email: support@youtube.com <br>
+        Phone: +91 9876543210
+    </p>
+    <hr>
+</section>
+
+
+<section id="account">
+    <h2>Your Account</h2>
+    <p>
+        Login to manage your subscriptions and uploads.
+    </p>
+    <hr>
+</section>
+
+</main>
+
+
+<!-- ========== FOOTER ========== -->
+<footer style="text-align: center; background-color: lightgray; padding: 10px;">
+
+    <nav>
+        <a href="#home">Home</a><br>
+        <a href="#about">About</a><br>
+        <a href="#downloads">Downloads</a><br>
+        <a href="#contact">Contact</a><br>
+        <a href="#account">Account</a><br>
+    </nav>
+
     <p>&copy; 2024 YouTube. All rights reserved.</p>
-    </footer> 
+
+</footer>
+
 </body>
 </html>
