--- a/project/Account.Html
+++ b/project/Account.Html
@@ -3,101 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Landing Page</title>
+    <title>Account - YouTube</title>
 </head>
 
 <body>
 
-
 <header>
-
-    <img src="https://thumbs.dreamstime.com/b/dreamstime-template-198518319.jpg"
-         alt="YouTube Logo" height="50" width="60">
+    <img src="https://thumbs.dreamstime.com/b/dreamstime-template-198518319.jpg" height="50" width="60">
 
     <input type="text" placeholder="Search" size="40">
     <button>Search</button>
 
     <hr>
-
     <center>
         <nav>
-            <a href="#home">Home</a> |
-            <a href="#about">About</a> |
-            <a href="#downloads">Downloads</a> |
-            <a href="#contact">Contact Us</a> |
-            <a href="#account">Account</a>
+            <a href="index.html">Home</a> |
+            <a href="AboutUs.html">About</a> |
+            <a href="Downloads.html">Downloads</a> |
+            <a href="ContactUs.html">Contact Us</a> |
+            <a href="Account.html">Account</a>
         </nav>
     </center>
-
     <hr>
 </header>
 
-
-
 <main>
+<section>
+    <h2>Login to Your Account</h2>
 
+    <form>
+        <label>Username:</label><br>
+        <input type="text" placeholder="Enter username"><br><br>
 
-<section id="home">
-    <h2>Welcome to YouTube</h2>
-    <p>
-        Your go-to platform for video sharing and entertainment.
-        Watch videos, subscribe to channels and explore trending content.
-    </p>
-    <hr>
+        <label>Password:</label><br>
+        <input type="password" placeholder="Enter password"><br><br>
+
+        <input type="submit" value="Login">
+        <input type="reset" value="Clear">
+    </form>
+
+    <p>New user? <a href="signUp.html">Create Account</a></p>
 </section>
-
-<section id="about">
-    <h2>About Us</h2>
-    <p>
-        YouTube is a video sharing platform where users can upload,
-        watch and share videos worldwide.
-    </p>
-    <hr>
-</section>
-
-<section id="downloads">
-    <h2>Downloads</h2>
-    <p>
-        Download our mobile app to enjoy videos anytime, anywhere.
-    </p>
-    <hr>
-</section>
-
-
-<section id="contact">
-    <h2>Contact Us</h2>
-    <p>
-        Email: support@youtube.com <br>
-        Phone: +91 9876543210
-    </p>
-    <hr>
-</section>
-
-
-<section id="account">
-    <h2>Your Account</h2>
-    <p>
-        Login to manage your subscriptions and uploads.
-    </p>
-    <hr>
-</section>
-
 </main>
 
-
-<!-- ========== FOOTER ========== -->
-<footer style="text-align: center; background-color: lightgray; padding: 10px;">
-
+<footer style="text-align:center; background:lightgray; padding:10px;">
     <nav>
-        <a href="#home">Home</a><br>
-        <a href="#about">About</a><br>
-        <a href="#downloads">Downloads</a><br>
-        <a href="#contact">Contact</a><br>
-        <a href="#account">Account</a><br>
+        <a href="index.html">Home</a><br>
+        <a href="AboutUs.html">About</a><br>
+        <a href="Downloads.html">Downloads</a><br>
+        <a href="ContactUs.html">Contact</a><br>
+        <a href="Account.html">Account</a><br>
     </nav>
-
     <p>&copy; 2024 YouTube. All rights reserved.</p>
-
 </footer>
 
 </body>
