--- a/project/Downloads.html
+++ b/project/Downloads.html
@@ -3,37 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Downloads - YouTube</title>
 </head>
+
 <body>
-     <header>
-        <div>
-            <img src="https://thumbs.dreamstime.com/b/dreamstime-template-198518319.jpg" alt="YouTube Logo" height="50px" width="60px">
-            <input type="text" style=" padding-left: 10px; height:30px; width:400px; border-radius: 20px;" placeholder="Search">
-            <button style="height:30px; border-radius: 20px;">Search</button>
-            <section>
-                <hr>
-            <center>
-            <nav>
-                    <a href="#home" style="padding-left: 10px;">Home</a>
-                    <a href="#about"style="padding-left: 10px;">About</a>
-                    <a href="#services"style="padding-left: 10px;">Downloads</a>
-                    <a href="#contact"style="padding-left: 10px;">ContactUs</a>
-                    <a href="#contact"style="padding-left: 10px;">Account</a>
-            </nav>
-            </center>
-            </section>
-        </div>
-    </header>
-    <footer style="text-align: center; padding: 10px; background-color: lightgray; margin-top: 20px;">
-       <nav >
-                    <a href="#home" style="padding-left: 10px;">Home</a><br>
-                    <a href="#about"style="padding-left: 10px;">About</a><br>
-                    <a href="#services"style="padding-left: 10px;">Downloads</a><br>
-                    <a href="#contact"style="padding-left: 10px;">Contact</a><br>
-                    <a href="#contact"style="padding-left: 10px;">Account</a><br>
+
+<header>
+    <img src="https://thumbs.dreamstime.com/b/dreamstime-template-198518319.jpg" height="50" width="60">
+
+    <input type="text" placeholder="Search" size="40">
+    <button>Search</button>
+
+    <hr>
+    <center>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="AboutUs.html">About</a> |
+            <a href="Downloads.html">Downloads</a> |
+            <a href="ContactUs.html">Contact Us</a> |
+            <a href="Account.html">Account</a>
         </nav>
+    </center>
+    <hr>
+</header>
+
+<main>
+<section>
+    <h2>Download Our App</h2>
+
+    <p>Download YouTube app for better experience:</p>
+
+    <ul>
+        <li><a href="#">Download for Android</a></li>
+        <li><a href="#">Download for iOS</a></li>
+        <li><a href="#">Download for Windows</a></li>
+    </ul>
+
+    <h3>Features</h3>
+    <ul>
+        <li>Watch videos offline</li>
+        <li>High quality streaming</li>
+        <li>Subscribe to channels</li>
+        <li>Upload videos easily</li>
+    </ul>
+</section>
+</main>
+
+<footer style="text-align:center; background:lightgray; padding:10px;">
+    <nav>
+        <a href="index.html">Home</a><br>
+        <a href="AboutUs.html">About</a><br>
+        <a href="Downloads.html">Downloads</a><br>
+        <a href="ContactUs.html">Contact</a><br>
+        <a href="Account.html">Account</a><br>
+    </nav>
     <p>&copy; 2024 YouTube. All rights reserved.</p>
-    </footer> 
+</footer>
+
 </body>
 </html>
