--- a/project/index.html
+++ b/project/index.html
@@ -45,10 +45,19 @@
         <td width="50%" valign="top">
             <h1>Welcome to YouTube</h1>
             <p>
-                Your go-to platform for video sharing and entertainment.
-                Explore videos, subscribe to your favorite channels and stay
-                connected with the latest trends.
+                Your go-to platform for video sharing and learning.
+                Watch educational videos, subscribe to channels and
+                build your skills with expert teachers.
             </p>
+
+            <h3>Popular Categories</h3>
+            <ul>
+                <li>Programming Tutorials</li>
+                <li>Competitive Coding</li>
+                <li>Web Development</li>
+                <li>Interview Preparation</li>
+                <li>Motivational Talks</li>
+            </ul>
         </td>
 
         <td width="50%">
@@ -60,21 +69,71 @@
 
 </main>
 
-
 <section>
     <hr>
-    <marquee>
-        <img src="img1.jfif" height="150" width="200">
-        <img src="img2.jfif" height="150" width="200">
-        <img src="img3.jfif" height="150" width="200">
-        <img src="img4.jfif" height="150" width="200">
-        <img src="img1.jfif" height="150" width="200">
-        <img src="img2.jfif" height="150" width="200">
+
+    <marquee behavior="scroll" direction="left" scrollamount="6">
+
+        <a href="https://www.youtube.com/watch?v=irqbmMNs2Bo" target="_blank">
+            <img src="https://i.ytimg.com/vi/irqbmMNs2Bo/hqdefault.jpg" height="150" width="220">
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=VTLCoHnyACE" target="_blank">
+            <img src="https://i.ytimg.com/vi/VTLCoHnyACE/hqdefault.jpg" height="150" width="220">
+        </a>    
+
+        <a href="https://www.youtube.com/watch?v=EZCc_4abdcE" target="_blank">
+            <img src="https://i.ytimg.com/vi/EZCc_4abdcE/hqdefault.jpg" height="150" width="220">
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=ZSPZob_1TOk" target="_blank">
+            <img src="https://i.ytimg.com/vi/ZSPZob_1TOk/hqdefault.jpg" height="150" width="220">
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=irqbmMNs2Bo" target="_blank">
+            <img src="https://i.ytimg.com/vi/irqbmMNs2Bo/hqdefault.jpg" height="150" width="220">
+        </a>
+
     </marquee>
+
     <hr>
 </section>
 
+<section>
+
+    <h2 align="center"> Why Learn From Educational Creators?</h2>
+
+    <center>
+        <table width="80%" cellpadding="10" border="1">
+            <tr>
+                <th>Feature</th>
+                <th>Benefit</th>
+            </tr>
+            <tr>
+                <td>Free Courses</td>
+                <td>No cost learning for students</td>
+            </tr>
+            <tr>
+                <td>Beginner Friendly</td>
+                <td>Concepts explained from basics</td>
+            </tr>
+            <tr>
+                <td>Career Guidance</td>
+                <td>Helps in placements and internships</td>
+            </tr>
+            <tr>
+                <td>Live Sessions</td>
+                <td>Doubt solving with teachers</td>
+            </tr>
+        </table>
+    </center>
+
+</section>
+
+
+<!-- ================= FOOTER ================= -->
 <footer>
+    <hr>
     <center>
         <nav>
             <a href="./">Home</a> |
