--- a/project/index.html
+++ b/project/index.html
@@ -22,22 +22,19 @@
             </td>
         </tr>
     </table>
-
     <hr>
-
     <center>
         <nav>
             <a href="./">Home</a> |
             <a href="./AboutUs.html">About</a> |
             <a href="./Downloads.html">Downloads</a> |
             <a href="./ContactUs.html">Contact</a> |
-            <a href="./Account.html">Account</a>
+            <a href="Account.html">Account</a>
         </nav>
     </center>
 
     <hr>
 </header>
-
 <main>
 
 <table width="100%" cellpadding="15">
