--- a/project/index.html
+++ b/project/index.html
@@ -27,7 +27,7 @@
         <nav>
             <a href="./">Home</a> |
             <a href="./AboutUs.html">About</a> |
-            <a href="./Downloads.html">Downloads</a> |
+            <a href="Downloads.html">Downloads</a> |
             <a href="ContactUs.html">Contact</a> |
             <a href="Account.html">Account</a>
         </nav>
