--- a/project/index.html
+++ b/project/index.html
@@ -25,7 +25,7 @@
     <hr>
     <center>
         <nav>
-            <a href="./">Home</a> |
+            <a href="index.html">Home</a> |
             <a href="AboutUs.html">About</a> |
             <a href="Downloads.html">Downloads</a> |
             <a href="ContactUs.html">Contact</a> |
